# imageProcessing

./: .gitignore  CMakeLists.txt  Circle.hpp  Curve.hpp  Parabole.hpp  README.md  Template.hpp  main.cpp  mainZ.cpp  svgHandler.cpp
algorithms/: deformation.cpp  deformation.h  fieldAlgorithms.cpp  fieldAlgorithms.h  pyramid.cpp  pyramid.h  valleyLocalization.cpp  valleyLocalization.h
fitting/: Epoch.h  FitTemplate.cpp  FitTemplate.h
rapidxml-1.13/: rapidxml_iterators.hpp  rapidxml_print.hpp
svg/: Circle.cpp  Curve.cpp  Parabole.cpp  Template.cpp
utils/: Fields.cpp  Fields.h  Point.cpp  Point.h  RadiusResult.h
